--- a/hobim.html
+++ b/hobim.html
@@ -4,28 +4,93 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hobim</title>
+    <link rel="stylesheet" href="styles.css">
     <style>
         body {
-            text-align: center; /* Ortada hizalama */
+            text-align: center; /* Metinleri ortada hizala */
+            background-color: #f4f4f4; /* Arka plan rengi */
+            font-family: Arial, sans-serif; /* Yazı fontu */
+        }
+
+        .container {
+            margin: 20px auto;
+            padding: 20px;
+            width: 80%; /* İçerik genişliği */
+            background-color: #fff; /* Beyaz arka plan */
+            border-radius: 8px; /* Köşe yuvarlama */
+            box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1); /* Gölge efekti */
+            animation: fadeIn 1s; /* Fade-in animasyonu */
+        }
+
+        @keyframes fadeIn {
+            from {
+                opacity: 0; /* Başlangıç opaklığı */
+            }
+            to {
+                opacity: 1; /* Bitiş opaklığı */
+            }
+        }
+
+        h1 {
+            color: #4CAF50; /* Başlık rengi */
+            animation: slideIn 0.5s ease-in-out; /* Slide-in animasyonu */
+        }
+
+        @keyframes slideIn {
+            from {
+                transform: translateY(-20px); /* Yukarı kaydır */
+                opacity: 0; /* Başlangıç opaklığı */
+            }
+            to {
+                transform: translateY(0); /* Normal konuma döner */
+                opacity: 1; /* Bitiş opaklığı */
+            }
+        }
+
+        img {
+            width: 100%; /* Resimlerin genişliği */
+            max-width: 500px; /* Maksimum genişlik */
+            height: auto; /* Yükseklik otomatik */
+            border-radius: 8px; /* Resim köşe yuvarlama */
+            margin: 10px 0; /* Dikey boşluk */
+            animation: fadeIn 1s; /* Fade-in animasyonu */
+        }
+
+        a {
+            text-decoration: none;
+            color: #4CAF50;
+            border-bottom: 1px solid #4CAF50;
+            transition: color 0.3s, border-bottom 0.3s; /* Geçiş efekti */
+        }
+
+        a:hover {
+            color: #333;
+            border-bottom: 1px solid #333;
         }
     </style>
 </head>
 <body>
-    <h1>Hobim</h1>
-    <p>4 yıldır aktif olarak Hacettepe Üniversitesi Mağara Araştırma Kulübünde mağaracılık yapmaktayım. 
-    Bu kulübün amacı yeni mağaralar keşfetmek ve bunları haritalayarak mağaracılık literatürüne kazandırmak.
-    Aşağıdaki fotoğraflar da daha önce girdiğim dikey ve yatay mağaralardan görseller.</p>
-    
-    <img src="daglimagarasi.png" width="500px" height="700px" alt="Dağlı Mağarası">
-    <img src="magara.jpg" width="500px" height="700px" alt="Mağara">
-    <img src="tilkiler1.jpg" width="500px" height="700px" alt="Tilkiler 1">
-    <img src="tilkiler2.jpg" width="500px" height="700px" alt="Tilkiler 2">
+    <div class="container">
+        <h1>Hobim</h1>
+        <p>4 yıldır aktif olarak Hacettepe Üniversitesi Mağara Araştırma Kulübünde mağaracılık yapmaktayım. 
+        Bu kulübün amacı yeni mağaralar keşfetmek ve bunları haritalayarak mağaracılık literatürüne kazandırmak.
+        Aşağıdaki fotoğraflar da daha önce girdiğim dikey ve yatay mağaralardan görseller. Aşağıdaki haritalar 
+        butonundan da buradaki mağaraların yaklaşık konumlarını görebilirsiniz.</p>
+        
+        <img src="daglimagarasi.png" alt="Dağlı Mağarası">
+        <img src="magara.jpg" alt="Mağara">
+        <img src="tilkiler1.jpg" alt="Tilkiler 1">
+        <img src="tilkiler2.jpg" alt="Tilkiler 2">
 
-    <br>
-    <a href="index.html">Anasayfaya Dön</a>
-    <br>
-    <a href="yetenekler.html">Yetenekler Sayfasına Git</a>
-    <br>
-    <a href="makaleler.html">Makalelere Git</a> <!-- Hobi bağlantısı eklendi -->
+        <br>
+        <a href="index.html">Anasayfaya Dön</a>
+        <br>
+        <a href="yetenekler.html">Yetenekler Sayfasına Git</a>
+        <br>
+        <a href="makaleler.html">Makalelere Git</a>
+        <br>
+        <a href="map.html">Harita Sayfasına Git</a> <!-- Harita sayfasına bağlantı eklendi -->
+    </div>
 </body>
 </html>
+
