--- a/index.html
+++ b/index.html
@@ -4,24 +4,98 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Anasayfa</title>
+    <link rel="stylesheet" href="styles.css">
     <style>
         body {
             text-align: center; /* Metinleri ortada hizala */
+            background-color: #f4f4f4; /* Arka plan rengi */
+            font-family: Arial, sans-serif; /* Yazı fontu */
+        }
+
+        .container {
+            margin: 20px auto;
+            padding: 20px;
+            width: 80%; /* İçerik genişliği */
+            background-color: #fff; /* Beyaz arka plan */
+            border-radius: 8px; /* Köşe yuvarlama */
+            box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1); /* Gölge efekti */
+            animation: fadeIn 1s; /* Fade-in animasyonu */
+        }
+
+        @keyframes fadeIn {
+            from {
+                opacity: 0; /* Başlangıç opaklığı */
+            }
+            to {
+                opacity: 1; /* Bitiş opaklığı */
+            }
+        }
+
+        h1 {
+            color: #4CAF50; /* Başlık rengi */
+            animation: slideIn 0.5s ease-in-out; /* Slide-in animasyonu */
+        }
+
+        @keyframes slideIn {
+            from {
+                transform: translateY(-20px); /* Yukarı kaydır */
+                opacity: 0; /* Başlangıç opaklığı */
+            }
+            to {
+                transform: translateY(0); /* Normal konuma döner */
+                opacity: 1; /* Bitiş opaklığı */
+            }
+        }
+
+        h2 {
+            margin-top: 20px; /* Alt başlık için üst boşluk */
+            color: #333; /* Alt başlık rengi */
+        }
+
+        p {
+            line-height: 1.6; /* Satır aralığı */
+            animation: fadeIn 1s ease-in-out; /* Fade-in animasyonu */
+        }
+
+        a {
+            display: inline-block; /* Bağlantıları blok olarak göster */
+            margin: 10px; /* Bağlantılar arasında boşluk */
+            text-decoration: none;
+            color: #4CAF50;
+            border: 1px solid #4CAF50;
+            padding: 10px 15px; /* Buton benzeri görünüm */
+            border-radius: 5px; /* Yuvarlak köşeler */
+            transition: background-color 0.3s, color 0.3s; /* Geçiş efekti */
+            animation: bounce 0.5s infinite alternate; /* Bounce animasyonu */
+        }
+
+        @keyframes bounce {
+            from {
+                transform: translateY(0); /* Başlangıç konumu */
+            }
+            to {
+                transform: translateY(-5px); /* Yukarı kaydır */
+            }
+        }
+
+        a:hover {
+            background-color: #4CAF50; /* Hover durumu arka plan rengi */
+            color: white; /* Yazı rengi */
         }
     </style>
 </head>
 <body>
-    <h1>Ezgi Göç</h1>
-    <h2>İletişim</h2>
-    <p>Telefon: 05534168850</p>
-    <p>Gmail Adresi: ezgiigoc@gmail.com</p>
-    <p>Adres: Yücetepe Mahallesi Ata Sokak 19/2</p>
-
-    <h2>Diğer Sayfalar</h2>
-    <ul>
-        <li><a href="yetenekler.html">Yetenekler</a></li>
-        <li><a href="makaleler.html">Makaleler</a></li>
-        <li><a href="hobim.html">Hobim</a></li> <!-- Hobi bağlantısı eklendi -->
-    </ul>
+    <div class="container">
+        <h1>Ezgi Göç</h1>
+        <h2>İletişim</h2>
+        <p>Telefon: 05534168850</p>
+        <p>Gmail Adresi: ezgiigoc@gmail.com</p>
+        <p>Adres: Yücetepe Mahallesi Ata Sokak 19/2</p>
+        
+        <h2>Diğer Sayfalar</h2>
+        <a href="yetenekler.html">Yetenekler</a>
+        <a href="makaleler.html">Makaleler</a>
+        <a href="hobim.html">Hobim</a>
+    </div>
 </body>
 </html>
