--- a/makaleler.html
+++ b/makaleler.html
@@ -4,25 +4,108 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Makaleler</title>
+    <link rel="stylesheet" href="styles.css">
     <style>
         body {
             text-align: center; /* Metinleri ortada hizala */
+            background-color: #f4f4f4; /* Arka plan rengi */
+            font-family: Arial, sans-serif; /* Yazı fontu */
+        }
+
+        .container {
+            margin: 20px auto;
+            padding: 20px;
+            width: 80%; /* İçerik genişliği */
+            background-color: #fff; /* Beyaz arka plan */
+            border-radius: 8px; /* Köşe yuvarlama */
+            box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1); /* Gölge efekti */
+            animation: fadeIn 1s; /* Fade-in animasyonu */
+        }
+
+        @keyframes fadeIn {
+            from {
+                opacity: 0; /* Başlangıç opaklığı */
+            }
+            to {
+                opacity: 1; /* Bitiş opaklığı */
+            }
+        }
+
+        h2 {
+            color: #4CAF50; /* Başlık rengi */
+            animation: slideIn 0.5s ease-in-out; /* Slide-in animasyonu */
+        }
+
+        @keyframes slideIn {
+            from {
+                transform: translateY(-20px); /* Yukarı kaydır */
+                opacity: 0; /* Başlangıç opaklığı */
+            }
+            to {
+                transform: translateY(0); /* Normal konuma döner */
+                opacity: 1; /* Bitiş opaklığı */
+            }
+        }
+
+        p {
+            line-height: 1.6; /* Satır aralığı */
+            animation: fadeIn 1s ease-in-out; /* Fade-in animasyonu */
+        }
+
+        button {
+            padding: 10px 20px;
+            background-color: #4CAF50; /* Buton rengi */
+            color: white; /* Yazı rengi */
+            border: none;
+            border-radius: 5px; /* Buton köşeleri yuvarla */
+            cursor: pointer; /* Fare işaretçisi */
+            font-size: 16px;
+            transition: background-color 0.3s; /* Geçiş efekti */
+            animation: bounce 0.5s infinite alternate; /* Bounce animasyonu */
+        }
+
+        @keyframes bounce {
+            from {
+                transform: translateY(0); /* Başlangıç konumu */
+            }
+            to {
+                transform: translateY(-5px); /* Yukarı kaydır */
+            }
+        }
+
+        button:hover {
+            background-color: #45a049; /* Hover efekti */
+        }
+
+        a {
+            text-decoration: none;
+            color: #4CAF50;
+            border-bottom: 1px solid #4CAF50;
+            transition: color 0.3s, border-bottom 0.3s; /* Geçiş efekti */
+        }
+
+        a:hover {
+            color: #333;
+            border-bottom: 1px solid #333;
         }
     </style>
 </head>
 <body>
-    <h2>Makaleler</h2>
-    <p>Geçen yıl bitirme projem olan 'CBS Yazılımı ile Ankara İçin Güneş Enerjisi Potansiyel ve Uygunluk Haritasının Oluşturulması' 
-    başlıklı projemizin amacını ve sonucunu açıkladığımız videoyu aşağıya bırakıyorum. İyi seyirler.</p>
-    <a href="https://www.youtube.com/watch?v=iJDTXePXzQ8&ab_channel=Alperen%C3%87atak">
-        <button>Tıkla</button>
-    </a>
+    <div class="container">
+        <h2>Makaleler</h2>
+        <p>Geçen yıl bitirme projem olan 'CBS Yazılımı ile Ankara İçin Güneş Enerjisi Potansiyel ve Uygunluk Haritasının Oluşturulması' 
+        başlıklı projemizin amacını ve sonucunu açıkladığımız videoyu aşağıya bırakıyorum. İyi seyirler.</p>
+        
+        <a href="https://www.youtube.com/watch?v=iJDTXePXzQ8&ab_channel=Alperen%C3%87atak">
+            <button>Tıkla</button>
+        </a>
 
-    <br>
-    <a href="index.html">Anasayfaya Dön</a>
-    <br>
-    <a href="yetenekler.html">Yetenekler Sayfasına Git</a>
-    <br>
-    <a href="hobim.html">Hobime Git</a> <!-- Hobi bağlantısı eklendi -->
+        <br><br>
+        <a href="index.html">Anasayfaya Dön</a>
+        <br>
+        <a href="yetenekler.html">Yetenekler Sayfasına Git</a>
+        <br>
+        <a href="hobim.html">Hobime Git</a> <!-- Hobi bağlantısı eklendi -->
+    </div>
 </body>
 </html>
