--- a/yetenekler.html
+++ b/yetenekler.html
@@ -103,6 +103,51 @@
                 <td>İyi Seviye</td>
             </tr>
         </table>
+
+        <h2>Yetenekler (İngilizce ve Almanca)</h2>
+        <table>
+            <tr>
+                <th>İngilizce</th>
+                <th>Almanca</th>
+                <th>İspanyolca</th>
+            </tr>
+            <tr>
+                <td>İyi Seviye</td>
+                <td>Orta Seviye</td>
+                <td>Orta Seviye</td>
+            </tr>
+        </table>
+
+        <h2>Staj Bilgileri</h2>
+        <table>
+            <tr>
+                <th>Yıl</th>
+                <th>Eğitim</th>
+                <th>Süre</th>
+            </tr>
+            <tr>
+                <td>2022</td>
+                <td>GEOGİS Mühendislik</td>
+                <td>1 Ay</td>
+            </tr>
+            <tr>
+                <td>2024</td>
+                <td>Central Mühendislik</td>
+                <td>2 Ay</td>
+            </tr>
+        </table>
+
+        <h3> Stajda Öğrenilenler</h3>
+        <ul>
+            <li>Fotogrametri alanında uçuşların düzenlenmesi</li>
+            <li>Mimari çizimlerin yapılması</li>
+            <li>Uçuşlardan gelen fotoğrafların düzenlenip dijitale aktarılması</li>
+            <li>Netcad programında harita yapma</li>
+            <li>Uçuş planlaması yapmayı öğrenmek</li>
+            <li>Stereo ortamında kıymetlendirme yapmak</li>
+            <li>Halihazır harita editleme yapmak</li>
+            <li>Fotogrametrik dengeleme yapmak</li>
+        </ul>
         
         <br>
         <a href="index.html">Anasayfaya Dön</a>
@@ -113,4 +158,3 @@
     </div>
 </body>
 </html>
-
