--- a/hobim.html
+++ b/hobim.html
@@ -7,65 +7,83 @@
     <link rel="stylesheet" href="styles.css">
     <style>
         body {
-            text-align: center; /* Metinleri ortada hizala */
-            background-color: #f4f4f4; /* Arka plan rengi */
-            font-family: Arial, sans-serif; /* Yazı fontu */
+            text-align: center; 
+            background-color: #E6E6FA; /* Lila rengi */
+            font-family: Arial, sans-serif; 
         }
 
         .container {
             margin: 20px auto;
             padding: 20px;
-            width: 80%; /* İçerik genişliği */
-            background-color: #fff; /* Beyaz arka plan */
-            border-radius: 8px; /* Köşe yuvarlama */
-            box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1); /* Gölge efekti */
-            animation: fadeIn 1s; /* Fade-in animasyonu */
+            width: 80%; 
+            background-color: #fff; 
+            border-radius: 8px; 
+            box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1); 
+            animation: fadeIn 1s; 
         }
 
         @keyframes fadeIn {
             from {
-                opacity: 0; /* Başlangıç opaklığı */
+                opacity: 0; 
+                transform: translateY(20px);
             }
             to {
-                opacity: 1; /* Bitiş opaklığı */
+                opacity: 1; 
+                transform: translateY(0); 
             }
         }
 
         h1 {
-            color: #4CAF50; /* Başlık rengi */
-            animation: slideIn 0.5s ease-in-out; /* Slide-in animasyonu */
+            color: #4CAF50; 
+            animation: slideIn 0.5s ease-in-out; 
         }
 
         @keyframes slideIn {
             from {
-                transform: translateY(-20px); /* Yukarı kaydır */
-                opacity: 0; /* Başlangıç opaklığı */
+                transform: translateY(-20px); 
+                opacity: 0; 
             }
             to {
-                transform: translateY(0); /* Normal konuma döner */
-                opacity: 1; /* Bitiş opaklığı */
+                transform: translateY(0); 
+                opacity: 1; 
             }
         }
 
         img {
-            width: 100%; /* Resimlerin genişliği */
-            max-width: 500px; /* Maksimum genişlik */
-            height: auto; /* Yükseklik otomatik */
-            border-radius: 8px; /* Resim köşe yuvarlama */
-            margin: 10px 0; /* Dikey boşluk */
-            animation: fadeIn 1s; /* Fade-in animasyonu */
+            width: 100%; 
+            max-width: 500px; 
+            height: auto; 
+            border-radius: 8px; 
+            margin: 10px 0; 
+            animation: fadeIn 1s; 
         }
 
         a {
             text-decoration: none;
             color: #4CAF50;
             border-bottom: 1px solid #4CAF50;
-            transition: color 0.3s, border-bottom 0.3s; /* Geçiş efekti */
+            transition: color 0.3s, border-bottom 0.3s; 
         }
 
         a:hover {
             color: #333;
             border-bottom: 1px solid #333;
+        }
+
+        .button {
+            display: inline-block;
+            padding: 10px 20px;
+            margin: 10px 0;
+            background-color: #4CAF50;
+            color: white;
+            border: none;
+            border-radius: 5px;
+            text-align: center;
+            transition: background-color 0.3s;
+        }
+
+        .button:hover {
+            background-color: #45a049; 
         }
     </style>
 </head>
@@ -89,8 +107,7 @@
         <br>
         <a href="makaleler.html">Makalelere Git</a>
         <br>
-        <a href="map.html">Harita Sayfasına Git</a> <!-- Harita sayfasına bağlantı eklendi -->
+        <a href="map.html" class="button">Harita Sayfasına Git</a>
     </div>
 </body>
 </html>
-
