--- a/index.html
+++ b/index.html
@@ -6,81 +6,117 @@
     <title>Anasayfa</title>
     <link rel="stylesheet" href="styles.css">
     <style>
+        /* Google Font kullanımı */
+        @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap');
+
         body {
-            text-align: center; /* Metinleri ortada hizala */
-            background-color: #f4f4f4; /* Arka plan rengi */
-            font-family: Arial, sans-serif; /* Yazı fontu */
+            text-align: center;
+            background: linear-gradient(135deg, #e0c3fc, #8ec5fc); /* Dış kısım açık mor (gradient) */
+            font-family: 'Poppins', sans-serif;
+            color: #333;
+            margin: 0;
+            padding: 0;
         }
 
         .container {
-            margin: 20px auto;
-            padding: 20px;
-            width: 80%; /* İçerik genişliği */
-            background-color: #fff; /* Beyaz arka plan */
-            border-radius: 8px; /* Köşe yuvarlama */
-            box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1); /* Gölge efekti */
-            animation: fadeIn 1s; /* Fade-in animasyonu */
+            margin: 40px auto;
+            padding: 30px;
+            width: 80%;
+            background-color: #fff;
+            border-radius: 15px;
+            box-shadow: 0 4px 20px rgba(0, 0, 0, 0.2);
+            animation: fadeIn 1s ease-in-out;
         }
 
         @keyframes fadeIn {
             from {
-                opacity: 0; /* Başlangıç opaklığı */
+                opacity: 0;
             }
             to {
-                opacity: 1; /* Bitiş opaklığı */
+                opacity: 1;
             }
         }
 
         h1 {
-            color: #4CAF50; /* Başlık rengi */
-            animation: slideIn 0.5s ease-in-out; /* Slide-in animasyonu */
+            color: #4CAF50; /* Başlık için yeşil renk */
+            animation: slideIn 0.5s ease-in-out;
+            font-size: 3em;
+            margin-bottom: 20px;
         }
 
         @keyframes slideIn {
             from {
-                transform: translateY(-20px); /* Yukarı kaydır */
-                opacity: 0; /* Başlangıç opaklığı */
+                transform: translateY(-20px);
+                opacity: 0;
             }
             to {
-                transform: translateY(0); /* Normal konuma döner */
-                opacity: 1; /* Bitiş opaklığı */
+                transform: translateY(0);
+                opacity: 1;
             }
         }
 
         h2 {
-            margin-top: 20px; /* Alt başlık için üst boşluk */
-            color: #333; /* Alt başlık rengi */
+            color: #4CAF50; /* Alt başlık için yeşil renk */
+            margin-top: 40px;
+            font-weight: 600;
+            font-size: 2em;
         }
 
         p {
-            line-height: 1.6; /* Satır aralığı */
-            animation: fadeIn 1s ease-in-out; /* Fade-in animasyonu */
+            line-height: 1.8;
+            font-size: 1.2em;
+            color: #666;
+            animation: fadeIn 1s ease-in-out;
         }
 
         a {
-            display: inline-block; /* Bağlantıları blok olarak göster */
-            margin: 10px; /* Bağlantılar arasında boşluk */
+            display: inline-block;
+            margin: 15px;
             text-decoration: none;
-            color: #4CAF50;
-            border: 1px solid #4CAF50;
-            padding: 10px 15px; /* Buton benzeri görünüm */
-            border-radius: 5px; /* Yuvarlak köşeler */
-            transition: background-color 0.3s, color 0.3s; /* Geçiş efekti */
-            animation: bounce 0.5s infinite alternate; /* Bounce animasyonu */
+            color: #fff;
+            background-color: #4CAF50; /* Buton için yeşil renk */
+            padding: 12px 25px;
+            border-radius: 8px;
+            font-size: 1.1em;
+            transition: all 0.3s ease;
+            animation: pulse 2s infinite;
         }
 
-        @keyframes bounce {
-            from {
-                transform: translateY(0); /* Başlangıç konumu */
+        @keyframes pulse {
+            0% {
+                transform: scale(1);
             }
-            to {
-                transform: translateY(-5px); /* Yukarı kaydır */
+            50% {
+                transform: scale(1.05);
+            }
+            100% {
+                transform: scale(1);
             }
         }
 
         a:hover {
-            background-color: #4CAF50; /* Hover durumu arka plan rengi */
-            color: white; /* Yazı rengi */
+            background-color: #8ec5fc; /* Hover durumu için açık mor */
+            color: #fff;
+            box-shadow: 0 8px 15px rgba(76, 175, 80, 0.3);
+        }
+
+        /* Mobil uyum için düzenleme */
+        @media (max-width: 768px) {
+            .container {
+                width: 95%;
+            }
+
+            h1 {
+                font-size: 2.5em;
+            }
+
+            h2 {
+                font-size: 1.5em;
+            }
+
+            p, a {
+                font-size: 1em;
+            }
         }
     </style>
 </head>
