--- a/makaleler.html
+++ b/makaleler.html
@@ -6,87 +6,108 @@
     <title>Makaleler</title>
     <link rel="stylesheet" href="styles.css">
     <style>
+        /* Google Font kullanımı */
+        @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap');
+
         body {
-            text-align: center; /* Metinleri ortada hizala */
-            background-color: #f4f4f4; /* Arka plan rengi */
-            font-family: Arial, sans-serif; /* Yazı fontu */
+            text-align: center;
+            background: linear-gradient(135deg, #e0c3fc, #8ec5fc); /* Açık mor gradient */
+            font-family: 'Poppins', sans-serif;
+            color: #333;
+            margin: 0;
+            padding: 0;
         }
 
         .container {
-            margin: 20px auto;
-            padding: 20px;
-            width: 80%; /* İçerik genişliği */
-            background-color: #fff; /* Beyaz arka plan */
-            border-radius: 8px; /* Köşe yuvarlama */
-            box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1); /* Gölge efekti */
-            animation: fadeIn 1s; /* Fade-in animasyonu */
+            margin: 40px auto;
+            padding: 30px;
+            width: 80%;
+            background-color: #fff;
+            border-radius: 15px;
+            box-shadow: 0 4px 20px rgba(0, 0, 0, 0.2);
+            animation: fadeIn 1s ease-in-out;
         }
 
         @keyframes fadeIn {
             from {
-                opacity: 0; /* Başlangıç opaklığı */
+                opacity: 0;
             }
             to {
-                opacity: 1; /* Bitiş opaklığı */
+                opacity: 1;
             }
         }
 
         h2 {
-            color: #4CAF50; /* Başlık rengi */
-            animation: slideIn 0.5s ease-in-out; /* Slide-in animasyonu */
+            color: #4CAF50; /* Başlık yeşil */
+            animation: slideIn 0.5s ease-in-out;
+            font-size: 2em;
         }
 
         @keyframes slideIn {
             from {
-                transform: translateY(-20px); /* Yukarı kaydır */
-                opacity: 0; /* Başlangıç opaklığı */
+                transform: translateY(-20px);
+                opacity: 0;
             }
             to {
-                transform: translateY(0); /* Normal konuma döner */
-                opacity: 1; /* Bitiş opaklığı */
+                transform: translateY(0);
+                opacity: 1;
             }
         }
 
         p {
-            line-height: 1.6; /* Satır aralığı */
-            animation: fadeIn 1s ease-in-out; /* Fade-in animasyonu */
+            line-height: 1.6;
+            font-size: 1.2em;
+            animation: fadeIn 1s ease-in-out;
+            color: #333;
         }
 
+        /* Buton stilleri */
         button {
-            padding: 10px 20px;
-            background-color: #4CAF50; /* Buton rengi */
-            color: white; /* Yazı rengi */
+            padding: 12px 25px;
+            background-color: #4CAF50; /* Buton yeşil */
+            color: white;
             border: none;
-            border-radius: 5px; /* Buton köşeleri yuvarla */
-            cursor: pointer; /* Fare işaretçisi */
-            font-size: 16px;
-            transition: background-color 0.3s; /* Geçiş efekti */
-            animation: bounce 0.5s infinite alternate; /* Bounce animasyonu */
+            border-radius: 8px;
+            cursor: pointer;
+            font-size: 1.2em;
+            transition: background-color 0.3s ease, transform 0.3s ease; /* Geçiş efekti */
+            animation: pulse 1s infinite alternate;
+            box-shadow: 0 4px 15px rgba(0, 0, 0, 0.1); /* Hafif gölge */
+            margin: 10px; /* Butonlar arasında boşluk */
         }
 
-        @keyframes bounce {
-            from {
-                transform: translateY(0); /* Başlangıç konumu */
+        @keyframes pulse {
+            0% {
+                transform: scale(1);
             }
-            to {
-                transform: translateY(-5px); /* Yukarı kaydır */
+            50% {
+                transform: scale(1.05);
+            }
+            100% {
+                transform: scale(1);
             }
         }
 
         button:hover {
-            background-color: #45a049; /* Hover efekti */
+            background-color: #8ec5fc; /* Hover mor */
+            color: #fff;
+            box-shadow: 0 8px 15px rgba(76, 175, 80, 0.3); /* Hover gölge */
+            transform: translateY(-3px); /* Hover yükselme efekti */
         }
 
-        a {
-            text-decoration: none;
-            color: #4CAF50;
-            border-bottom: 1px solid #4CAF50;
-            transition: color 0.3s, border-bottom 0.3s; /* Geçiş efekti */
-        }
+        /* Mobil uyum için düzenleme */
+        @media (max-width: 768px) {
+            .container {
+                width: 95%;
+            }
 
-        a:hover {
-            color: #333;
-            border-bottom: 1px solid #333;
+            h2 {
+                font-size: 1.5em;
+            }
+
+            p, button {
+                font-size: 1em;
+            }
         }
     </style>
 </head>
@@ -101,11 +122,18 @@
         </a>
 
         <br><br>
-        <a href="index.html">Anasayfaya Dön</a>
-        <br>
-        <a href="yetenekler.html">Yetenekler Sayfasına Git</a>
-        <br>
-        <a href="hobim.html">Hobime Git</a> <!-- Hobi bağlantısı eklendi -->
+        <a href="index.html">
+            <button>Anasayfaya Dön</button>
+        </a>
+        
+        <a href="yetenekler.html">
+            <button>Yetenekler Sayfasına Git</button>
+        </a>
+
+        <a href="hobim.html">
+            <button>Hobime Git</button>
+        </a>
     </div>
 </body>
 </html>
+
